--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 		<header></header>
 		<ul id="piano">
 			<li><div class="white" id="C1"></div></li>
-			<li><div class="white" id="D1"></div><span class="black" id="Db1"></span></li>
-			<li><div class="white" id="E1"></div><span class="black" id="Eb1"></span></li>
+			<li><div class="white" id="D1"></div><div class="black" id="Db1"></div></li>
+			<li><div class="white" id="E1"></div><div class="black" id="Eb1"></div></li>
 			<li><div class="white" id="F1"></div></li>
-			<li><div class="white" id="G1"></div><span class="black" id="Gb1"></span></li>
-			<li><div class="white" id="A1"></div><span class="black" id="Ab1"></span></li>
-			<li><div class="white" id="B1"></div><span class="black" id="Bb1"></span></li> <!--Fim da primeira oitava -->
+			<li><div class="white" id="G1"></div><div class="black" id="Gb1"></div></li>
+			<li><div class="white" id="A1"></div><div class="black" id="Ab1"></div></li>
+			<li><div class="white" id="B1"></div><div class="black" id="Bb1"></div></li> <!--Fim da primeira oitava -->
 			<li><div class="white" id="C2"></div></li>
-			<li><div class="white" id="D2"></div><span class="black" id="Db2"></span></li>
-			<li><div class="white" id="E2"></div><span class="black" id="Eb2"></span></li>
+			<li><div class="white" id="D2"></div><div class="black" id="Db2"></div></li>
+			<li><div class="white" id="E2"></div><div class="black" id="Eb2"></div></li>
 			<li><div class="white" id="F2"></div></li>
-			<li><div class="white" id="G2"></div><span class="black" id="Gb2"></span></li>
-			<li><div class="white" id="A2"></div><span class="black" id="Ab2"></span></li>
-			<li><div class="white" id="B2"></div><span class="black" id="Bb2"></span></li>
+			<li><div class="white" id="G2"></div><div class="black" id="Gb2"></div></li>
+			<li><div class="white" id="A2"></div><div class="black" id="Ab2"></div></li>
+			<li><div class="white" id="B2"></div><div class="black" id="Bb2"></div></li>
 			<li><div class="white" id="C3"></div></li>
 		</ul>
 	</section> <!-- End main -->
