dividi algumas funções para melhor organizar e reaproveitar código. Também alterei a função que realiza o play para que essa não precise carregar o arquivo todas as vezes em que há o evento de touch. Usei também o touch end para finalizar o evento de play quando eu deixar de pressionar a tecla.

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 	<section role="region">
 		<header></header>
 		<ul id="piano">
-			<li><div class="white" id="C1"></div></li>
-			<li><div class="white" id="D1"></div><span class="black" id="Db1"></span></li>
-			<li><div class="white" id="E1"></div><span class="black" id="Eb1"></span></li>
-			<li><div class="white" id="F1"></div></li>
-			<li><div class="white" id="G1"></div><span class="black" id="Gb1"></span></li>
-			<li><div class="white" id="A1"></div><span class="black" id="Ab1"></span></li>
-			<li><div class="white" id="B1"></div><span class="black" id="Bb1"></span></li> <!--Fim da primeira oitava -->
-			<li><div class="white" id="C2"></div></li>
-			<li><div class="white" id="D2"></div><span class="black" id="Db2"></span></li>
-			<li><div class="white" id="E2"></div><span class="black" id="Eb2"></span></li>
-			<li><div class="white" id="F2"></div></li>
-			<li><div class="white" id="G2"></div><span class="black" id="Gb2"></span></li>
-			<li><div class="white" id="A2"></div><span class="black" id="Ab2"></span></li>
-			<li><div class="white" id="B2"></div><span class="black" id="Bb2"></span></li>
-			<li><div class="white" id="C3"></div></li>
+			<li><div class="key white" id="C1"></div></li>
+			<li><div class="key white" id="D1"></div><span class="key black" id="Db1"></span></li>
+			<li><div class="key white" id="E1"></div><span class="key black" id="Eb1"></span></li>
+			<li><div class="key white" id="F1"></div></li>
+			<li><div class="key white" id="G1"></div><span class="key black" id="Gb1"></span></li>
+			<li><div class="key white" id="A1"></div><span class="key black" id="Ab1"></span></li>
+			<li><div class="key white" id="B1"></div><span class="key black" id="Bb1"></span></li> <!--Fim da primeira oitava -->
+			<li><div class="key white" id="C2"></div></li>
+			<li><div class="key white" id="D2"></div><span class="key black" id="Db2"></span></li>
+			<li><div class="key white" id="E2"></div><span class="key black" id="Eb2"></span></li>
+			<li><div class="key white" id="F2"></div></li>
+			<li><div class="key white" id="G2"></div><span class="key black" id="Gb2"></span></li>
+			<li><div class="key white" id="A2"></div><span class="key black" id="Ab2"></span></li>
+			<li><div class="key white" id="B2"></div><span class="key black" id="Bb2"></span></li>
+			<li><div class="key white" id="C3"></div></li>
 		</ul>
 	</section> <!-- End main -->
 
