--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/all.css">
 	<link rel="stylesheet" type="text/css" href="css/keys.css">
     <script src="/js/jquery-2.1.3.min.js"></script>
     <script src="/js/app.js"></script>
